Weather App: fix bugs on iOS
Fix native iOS problems:

- :has selector not working
- fixed background not working
- input focus zooms page in

--- a/Weather_App/src/styles/media.css
+++ b/Weather_App/src/styles/media.css
@@ -20,4 +20,15 @@ body {
     background-image: url(../images/background.jpg);
     background-position: center top;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+@supports (-webkit-hyphens:none) {
+    body {
+        background-image: none;
+    }
+    body::before {
+        background-image: url(../images/background.jpg);
+        background-position: center top;
+        background-repeat: no-repeat;
+    }
 }
